--- a/Compression.ipynb
+++ b/Compression.ipynb
@@ -87,6 +87,8 @@
     "\n",
     "$$\\dot x \\mapsto 2\\sqrt{\\frac 1 q  \\dot x + \\frac 3 8}$$ where $q$ is the intensity induced by a single photon. \n",
     "\n",
+    "This will result in an image with the noise variance of 1.0 everywhere.\n",
+    "\n",
     "In practice, A/D converters may add an offset and the single-photon magnitude $q$ is unknown. Therefore, the variance normalization is derived by robust paremetric fitting of the noise variance to the pixel intensity. A useful output of this fit is the NEQ (noise-equivalent quantum) size $q$.\n",
     "\n",
     "This transformation is stable with respect to the imaging settings and can be estimated accurately from a larger stretch of data. "
@@ -143,9 +145,9 @@
    "id": "6126fccb",
    "metadata": {},
    "source": [
-    "This compression is based purely based on frequencies of single-pixel values in the temporal difference images. Additional gains may be derived from spatial dependencies. \n",
+    "This compression is based purely on the frequencies of single-pixel intensity values in the temporal difference images. Additional gains may be derived from spatial dependencies. \n",
     "\n",
-    "We must define data compression utilities that are configurable and replaceable. "
+    "We must define data compression utilities that are configurable and replaceable to allow for iterative improvements."
    ]
   }
  ],
