corrected the log base

--- a/Compression.ipynb
+++ b/Compression.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "For $\\beta < 1.0$, the effect of grayscale quantization can be approximated as an independent random variable distributed uniformly on the interval $\\left[-\\delta/2, +\\delta/2\\right]$.\n",
     "\n",
-    "Then the mean and the variance of the noise and quantization are $$\\mathop{\\mathbb E}[\\varepsilon + d] = 0$$ and $$\\mathop{\\mathbb E}[(\\varepsilon + d)^2] = \\mathop{\\mathbb E}[\\varepsilon^2] + \\mathop{\\mathbb E}[d^2] = \\sigma^2 + \\frac 1 6 \\delta^2 =  \\left(1 + \\frac 1 6 \\beta^2\\right) \\sigma^2$$\n",
+    "Then the mean and the variance of the noise and quantization are $$\\mathop{\\mathbb E}[\\varepsilon + d] = 0$$ and $$\\mathop{\\mathbb E}\\left[(\\varepsilon + d)^2\\right] = \\mathop{\\mathbb E}\\left[\\varepsilon^2\\right] + \\mathop{\\mathbb E}\\left[d^2\\right] = \\sigma^2 + \\frac 1 6 \\delta^2 =  \\left(1 + \\frac 1 6 \\beta^2\\right) \\sigma^2$$\n",
     "\n",
     "This means that that quantization modifies the standard deviation of the noise by the factor of $\\sqrt{1 + \\frac 1 6 \\beta^2}$. This factor express the releative drop in signal-to-noise ratio (SNR) introduced by quantization. The degrading effect of quantization on the variance of the estimate does not become signficant until $\\beta$ exceeds 0.5:  \n",
     "\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fde3891e",
    "metadata": {},
    "outputs": [
@@ -109,12 +109,12 @@
    "source": [
     "## Frequency-based lossless compression\n",
     "\n",
-    "Images produced as the difference of the current frame from a running average, will produce roughly normally-distributed pixel values with the entropy of $\\frac 1 2 \\log_2\\frac{2 \\pi e}{\\beta^2}$ bits per pixel for region areas with little activity. For $\\beta = 0.5$, this will be 2.1 bits per pixel. "
+    "Images produced as the difference of the current frame from a running average, will produce roughly normally-distributed pixel values with the entropy of $H = \\frac 1 2 \\log_2\\frac{2 \\pi e}{\\beta^2}$ bits per pixel for region areas with little activity. For $\\beta = 0.5$, this will be 3 bits per pixel. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "686fdff0",
    "metadata": {},
    "outputs": [
@@ -122,14 +122,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.1 bits/per pixel\n"
+      "3.0 bits/per pixel\n"
      ]
     }
    ],
    "source": [
     "import math\n",
     "β, e, π = 0.5, math.e, math.pi \n",
-    "print(f\"{0.5 * math.log(2*π*e/β**2):0.2} bits/per pixel\")"
+    "print(f\"{0.5 * math.log(2*π*e/β**2, 2):0.2} bits/per pixel\")"
    ]
   },
   {
@@ -153,7 +153,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -167,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
