--- a/Compression.ipynb
+++ b/Compression.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "Let $d$ be the offset introduced by the grayscale quantization with step $\\delta$.\n",
     "\n",
-    "Thus the recorded signal is $$\\dot x = x + n + d$$\n",
+    "Thus the recorded signal is $$\\dot x = x + \\varepsilon + d$$\n",
     "\n",
     "Let $\\beta = \\delta/\\sigma$ be the quantization step-to-noise ratio. \n",
     "\n",
