Add two new datasets and change the example notebook to work with the data

--- a/notebooks/19Jan2023Meeting.ipynb
+++ b/notebooks/19Jan2023Meeting.ipynb
@@ -29,9 +29,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = '../testdata/2020-09-15_RL102_t-006_Cycle00001_Ch3.tif'\n",
-    "scan = TiffFile(file).asarray()\n",
+    "file = '../testdata/DatasetA.npy'\n",
+    "scan = np.load(file)\n",
     "print(f\"Movie shape: {scan.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1d2fbea-2782-41ae-ba74-f3f28b635799",
+   "metadata": {},
+   "source": [
+    "## Quantal size estimation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e86b238-a3a7-45f1-a3cf-4c27b42ef867",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analyze(scan)"
    ]
   },
   {
@@ -49,9 +67,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "quantal_size = 461 # This number may slightly vary at each run as it is estimated through robust fitting.\n",
+    "quantal_size = 427 # This number may slightly vary at each run as it is estimated through robust fitting.\n",
     "\n",
-    "plt.imshow((scan[300:302].mean(0)/quantal_size), cmap='gray')\n",
+    "plt.imshow((scan.mean(0)/quantal_size), cmap='gray')\n",
     "cbar = plt.colorbar(fraction=0.05, pad=0.1)\n",
     "ax2 = cbar.ax.twinx()\n",
     "ymin, ymax = cbar.ax.get_ylim()\n",
@@ -74,18 +92,18 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1)\n",
-    "p = ax.hist((scan[:500].mean(0).flatten()), bins=1000, log=True)\n",
+    "p = ax.hist((scan.mean(0).flatten()), bins=1000, log=True)\n",
     "plt.title('Historgram of Mean Intensity')\n",
     "ax.set_xlabel('Intensity')\n",
     "ax.set_ylabel('N')\n",
     "\n",
     "intensity = lambda x: p\n",
     "\n",
-    "photons = lambda x: intensity / 461\n",
+    "photons = lambda x: intensity / quantal_size\n",
     "\n",
     "ax2 = ax.twiny()\n",
     "xmin, xmax = ax.get_xlim()\n",
-    "ax2.set_xlim(xmin/461., xmax/461.)\n",
+    "ax2.set_xlim(xmin/quantal_size, xmax/quantal_size)\n",
     "ax2.set_xlabel('Photon');"
    ]
   },
@@ -105,26 +123,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = 2000\n",
+    "t = 0\n",
     "plt.imshow((scan[t+1].astype(float)-scan[t].astype(float)), cmap='seismic',clim=[-2000, 2000]);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "824467c0-a143-4380-83c4-5bde26cdf3a9",
-   "metadata": {},
-   "source": [
-    "## Quantal size estimation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d9d336c-9fcc-4e4c-8750-e67618661ad5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "analyze(scan[:500])"
    ]
   }
  ],
@@ -144,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
