--- a/notebooks/19Jan2023Meeting.ipynb
+++ b/notebooks/19Jan2023Meeting.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "analyze(scan)"
+    "analyze(scan.transpose(1,2,0)) # Tranpose dimensions to have Height, Width, Time."
    ]
   },
   {
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "quantal_size = 427 # This number may slightly vary at each run as it is estimated through robust fitting.\n",
+    "quantal_size = 725 # This number may slightly vary at each run as it is estimated through robust fitting.\n",
     "\n",
     "plt.imshow((scan.mean(0)/quantal_size), cmap='gray')\n",
     "cbar = plt.colorbar(fraction=0.05, pad=0.1)\n",
@@ -126,11 +126,19 @@
     "t = 0\n",
     "plt.imshow((scan[t+1].astype(float)-scan[t].astype(float)), cmap='seismic',clim=[-2000, 2000]);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6e26ec9-8bd8-45d6-a198-f4cf2c7cd633",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -144,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
